added a google tag for analytics

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Go Go Gaia: All-in-One Women's Health App | Track Your Wellness Journey" />
     <meta property="og:description" content="Empower your health with Go Go Gaia, the all-in-one women's health app. Track cycles, moods, fitness, and more for a holistic wellness experience." />
-    <meta property="og:image" content="https://yourwebsite.com/path/to/image.jpg" />
+    <meta property="og:image" content="https://go-go-gaia.com/WhatsApp Image 2024-06-28 at 17.30.21.jpeg" />
     <meta property="og:url" content="https://go-go-gaia.com" />
     
     <!-- Twitter Card Meta Tags -->
@@ -26,6 +26,16 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZEM6KB1QWF"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZEM6KB1QWF');
+    </script>
+
     <!-- Structured Data -->
     <script type="application/ld+json">
       {
