much better on phone aesthetics

--- a/index.html
+++ b/index.html
@@ -77,17 +77,20 @@
             <div class="container d-flex flex-column flex-md-row align-items-center">
                 <div class="hero-text text-md-start mb-4 mb-md-0">
                     <h1 class="display-4 fw-bold">GO GO GAIA</h1>
-                    <p class="lead mb-4">Your personal health companion for a balanced life.</p>
+                    <p class="lead mb-4">Your wellness hub at your fingertip.</p>
+                    <p class="lead mb-4">No more guesswork—just empowered choices, clear insights, and confident health decisions.</p>
+
                     <a class="btn btn-primary btn-lg" href="https://apps.apple.com/app/apple-store/id6608432371?pt=127249655&ct=gogogaia.com&mt=8" role="button">Download on the App Store</a>
                     
                     <!-- Testimonial Block with Star Rating -->
-                    <blockquote class="testimonial mt-4">
-                      <div class="star-rating">★★★★★</div> <!-- Star rating inside the testimonial -->
-                      <p>"Finally, a cycle app that actually considers the whole picture of your health."</p>
-                      <footer class="blockquote-footer">Sarah, 26</footer>
-                  </blockquote>
+                    <div class="testimonial mt-4">
+                        <div class="star-rating">★★★★★</div> <!-- Star rating inside the testimonial -->
+                        <p>"Finally, a cycle app that actually considers the whole picture of your health."</p>
+                        <p class="blockquote-footer">Sarah, 26</p>
+                    </div>
                 </div>
-                <div class="hero-image" style="flex: 1; max-width: 30%;">
+                <div class="hero-image" style="flex: 1;"> <!-- max-width: 40%; -->
+
                     <div id="screenshotCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
