improved screenshots for phone version

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <section class="dynamic-section text-center py-5">
             <div class="container">
-                <p>Get in control of your <span id="dynamicWord">health</span>.</p>
+                <p>Understand your <span id="dynamicWord">health</span>.</p>
             </div>
         </section>
 
