fixed navbar etc

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </header>
     <main role="main">
         <section class="text-center py-5">
-            <div class="container d-flex flex-column flex-md-row align-items-center">
+            <div class="hero-container d-flex flex-column flex-md-row align-items-center">
                 <div class="hero-text text-md-start mb-4 mb-md-0">
                     <h1 class="display-4 fw-bold">GO GO GAIA</h1>
                     <p class="lead mb-4">Your wellness hub at your fingertip.</p>
