--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="hero-image animate__animated animate__fadeInRight">
-                    <div id="screenshotCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div id="screenshotCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="image-wrapper">
@@ -142,6 +142,15 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                            <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                            <button type="button" data-bs-target="#screenshotCarousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                        </div>
                     </div>
                 </div>
             </div>
