--- a/index.html
+++ b/index.html
@@ -76,11 +76,17 @@
               <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
               <li class="nav-item"><a class="nav-link" href="#benefits">Benefits</a></li>
               <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
-              <li class="nav-item"><a class="nav-link" href="#social-proof">Join Us</a></li>
+              <li class="nav-item"><a class="nav-link" href="#social-proof">Services</a></li>
               <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
               <li class="nav-item"><a class="nav-link" href="#early-access">Download</a></li>
               <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
           </ul>
+          <div class="social-icons ms-md-3 d-none d-md-flex">
+              <a href="https://twitter.com/holland_neuro" target="_blank" class="social-icon"><i class="bi bi-twitter"></i></a>
+              <a href="https://instagram.com/gogogaia_tracker" target="_blank" class="social-icon"><i class="bi bi-instagram"></i></a>
+              <a href="https://tiktok.com/@gogogaia_tracker" target="_blank" class="social-icon"><i class="bi bi-tiktok"></i></a>
+              <a href="mailto:support@hollandneurotech.com" class="social-icon"><i class="bi bi-envelope"></i></a>
+          </div>
         </div>
       </div>
     </nav>
@@ -337,35 +343,39 @@
 
         <section id="social-proof" class="social-proof-section py-5">
             <div class="container text-center">
-                <h2 class="mb-5 animate__animated animate__fadeIn">Join Our Growing Community</h2>
+                <h2 class="mb-5 animate__animated animate__fadeIn">Our Services</h2>
                 
                 <div class="row stats-row mb-5">
                     <div class="col-md-4 mb-4 mb-md-0">
                         <div class="stat-card animate__animated animate__fadeInUp">
-                            <div class="stat-icon"><i class="bi bi-people"></i></div>
-                            <div class="stat-label">Early Adopters</div>
-                            <p class="stat-description">Be among the first to experience the future of women's health tracking</p>
+                            <div class="stat-icon"><i class="bi bi-mic"></i></div>
+                            <div class="stat-label">Speaking Workshops</div>
+                            <p class="stat-description">Engaging workshops on women's health, technology, and wellness for your organization</p>
+                            <a href="mailto:support@hollandneurotech.com" class="btn btn-outline-primary mt-3">Inquire Now</a>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4 mb-md-0">
-                        <div class="stat-card animate__animated animate__fadeInUp animate__delay-1s">
-                            <div class="stat-icon"><i class="bi bi-star"></i></div>
-                            <div class="stat-label">5-Star Reviews</div>
-                            <p class="stat-description">Our early users are loving the experience and giving us top ratings</p>
+                        <div class="stat-card animate__animated animate__fadeInUp animate__delay-1s popular-card">
+                            <div class="popular-badge">Most Popular</div>
+                            <div class="stat-icon"><i class="bi bi-laptop"></i></div>
+                            <div class="stat-label">Neurotech Consulting</div>
+                            <p class="stat-description">Expert consulting services for health tech companies looking to innovate in the women's wellness space</p>
+                            <a href="mailto:support@hollandneurotech.com" class="btn btn-primary mt-3">Get Started</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="stat-card animate__animated animate__fadeInUp animate__delay-2s">
-                            <div class="stat-icon"><i class="bi bi-graph-up-arrow"></i></div>
-                            <div class="stat-label">Rapidly Improving</div>
-                            <p class="stat-description">We're constantly adding new features based on user feedback</p>
+                            <div class="stat-icon"><i class="bi bi-app"></i></div>
+                            <div class="stat-label">App Integration</div>
+                            <p class="stat-description">Integrate with our API to enhance your health platform with our advanced tracking technology</p>
+                            <a href="mailto:support@hollandneurotech.com" class="btn btn-outline-primary mt-3">Learn More</a>
                         </div>
                     </div>
                 </div>
                 
                 <div class="early-adopter-cta">
-                    <p class="lead mb-4">Help shape the future of Go Go Gaia by joining our community of early adopters</p>
-                    <a href="#early-access" class="btn btn-outline-primary btn-lg">Download Now</a>
+                    <p class="lead mb-4">Interested in our services? Contact us to discuss how we can help your organization</p>
+                    <a href="mailto:support@hollandneurotech.com" class="btn btn-outline-primary btn-lg">Contact Us</a>
                 </div>
             </div>
         </section>
@@ -500,7 +510,9 @@
         <div class="col-md-4 text-center mb-3 mb-md-0">
           <h5>Connect With Us</h5>
           <p><a href="mailto:support@hollandneurotech.com"><i class="bi bi-envelope me-2"></i>support@hollandneurotech.com</a></p>
-          <p><a href="https://twitter.com/holland_neuro"><i class="bi bi-twitter me-2"></i>@holland_neuro</a></p>
+          <p><a href="https://twitter.com/holland_neuro" target="_blank"><i class="bi bi-twitter me-2"></i>@holland_neuro</a></p>
+          <p><a href="https://instagram.com/gogogaia_tracker" target="_blank"><i class="bi bi-instagram me-2"></i>@gogogaia_tracker</a></p>
+          <p><a href="https://tiktok.com/@gogogaia_tracker" target="_blank"><i class="bi bi-tiktok me-2"></i>@gogogaia_tracker</a></p>
         </div>
         <div class="col-md-4 text-center text-md-end">
           <h5>Legal</h5>
