went back to the community section thing

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
               <li class="nav-item"><a class="nav-link" href="#benefits">Benefits</a></li>
               <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
-              <li class="nav-item"><a class="nav-link" href="#social-proof">Services</a></li>
+              <li class="nav-item"><a class="nav-link" href="#social-proof">Join Us</a></li>
               <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
               <li class="nav-item"><a class="nav-link" href="#early-access">Download</a></li>
               <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -343,39 +343,35 @@
 
         <section id="social-proof" class="social-proof-section py-5">
             <div class="container text-center">
-                <h2 class="mb-5 animate__animated animate__fadeIn">Our Services</h2>
+                <h2 class="mb-5 animate__animated animate__fadeIn">Join Our Growing Community</h2>
                 
                 <div class="row stats-row mb-5">
                     <div class="col-md-4 mb-4 mb-md-0">
                         <div class="stat-card animate__animated animate__fadeInUp">
-                            <div class="stat-icon"><i class="bi bi-mic"></i></div>
-                            <div class="stat-label">Speaking Workshops</div>
-                            <p class="stat-description">Engaging workshops on women's health, technology, and wellness for your organization</p>
-                            <a href="mailto:support@hollandneurotech.com" class="btn btn-outline-primary mt-3">Inquire Now</a>
+                            <div class="stat-icon"><i class="bi bi-people"></i></div>
+                            <div class="stat-label">Early Adopters</div>
+                            <p class="stat-description">Be among the first to experience the future of women's health tracking</p>
                         </div>
                     </div>
                     <div class="col-md-4 mb-4 mb-md-0">
-                        <div class="stat-card animate__animated animate__fadeInUp animate__delay-1s popular-card">
-                            <div class="popular-badge">Most Popular</div>
-                            <div class="stat-icon"><i class="bi bi-laptop"></i></div>
-                            <div class="stat-label">Neurotech Consulting</div>
-                            <p class="stat-description">Expert consulting services for health tech companies looking to innovate in the women's wellness space</p>
-                            <a href="mailto:support@hollandneurotech.com" class="btn btn-primary mt-3">Get Started</a>
+                        <div class="stat-card animate__animated animate__fadeInUp animate__delay-1s">
+                            <div class="stat-icon"><i class="bi bi-star"></i></div>
+                            <div class="stat-label">5-Star Reviews</div>
+                            <p class="stat-description">Our early users are loving the experience and giving us top ratings</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="stat-card animate__animated animate__fadeInUp animate__delay-2s">
-                            <div class="stat-icon"><i class="bi bi-app"></i></div>
-                            <div class="stat-label">App Integration</div>
-                            <p class="stat-description">Integrate with our API to enhance your health platform with our advanced tracking technology</p>
-                            <a href="mailto:support@hollandneurotech.com" class="btn btn-outline-primary mt-3">Learn More</a>
+                            <div class="stat-icon"><i class="bi bi-graph-up-arrow"></i></div>
+                            <div class="stat-label">Rapidly Improving</div>
+                            <p class="stat-description">We're constantly adding new features based on user feedback</p>
                         </div>
                     </div>
                 </div>
                 
                 <div class="early-adopter-cta">
-                    <p class="lead mb-4">Interested in our services? Contact us to discuss how we can help your organization</p>
-                    <a href="mailto:support@hollandneurotech.com" class="btn btn-outline-primary btn-lg">Contact Us</a>
+                    <p class="lead mb-4">Help shape the future of Go Go Gaia by joining our community of early adopters</p>
+                    <a href="#early-access" class="btn btn-outline-primary btn-lg">Download Now</a>
                 </div>
             </div>
         </section>
