updated different phases section and improved feeling of the website

--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
               <li class="nav-item"><a class="nav-link" href="#personas">Who It's For</a></li>
               <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
               <li class="nav-item"><a class="nav-link" href="blog/index.html">Blog</a></li>
+              <li class="nav-item"><a class="nav-link nav-download" href="https://apps.apple.com/app/apple-store/id6608432371?pt=127249655&ct=gogogaia.com&mt=8" target="_blank">Download</a></li>
           </ul>
           <div class="social-icons ms-md-3 d-none d-md-flex">
               <a href="https://twitter.com/holland_neuro" target="_blank" class="social-icon"><i class="bi bi-twitter"></i></a>
@@ -239,7 +240,7 @@
 
         <section class="dynamic-section text-center py-4">
             <div class="container">
-                <p>Understand your <span id="dynamicWord">health</span>.</p>
+                <p>Find your <span id="dynamicWord">why</span>.</p>
             </div>
         </section>
 
@@ -333,27 +334,57 @@
 
         <section id="benefits" class="benefits-section py-5">
             <div class="container">
-                <h2 class="text-center animate__animated animate__fadeIn">Transform Your Health Journey</h2>
-                <p class="text-center lead mb-5">See how Go Go Gaia can revolutionize the way you understand and manage your health</p>
+                <h2 class="text-center animate__animated animate__fadeIn">Your Health Journey, Simplified</h2>
+                <p class="text-center lead mb-5">From tracking to understanding—here's how Go Go Gaia turns your data into actionable insights</p>
 
-                <div class="row align-items-center mb-5">
-                    <div class="col-md-6 animate__animated animate__fadeInLeft">
-                        <img src="images/2.png" alt="Period tracker data visualization - Analyze menstrual cycle patterns and fertility trends" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
+                <div class="row align-items-center mb-4">
+                    <div class="col-md-4 animate__animated animate__fadeInLeft">
+                        <img src="images/1.png" alt="Unified health dashboard - All your health data in one place" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
                     </div>
-                    <div class="col-md-6 animate__animated animate__fadeInRight">
-                        <h3 class="mb-4">Make Data-Driven Decisions</h3>
-                        <p>Identify patterns between your cycle, mood, and energy levels. Schedule important events during your peak performance days. Understand how lifestyle changes impact your wellbeing.</p>
-                        <p class="small text-muted mt-3">Want to learn more? Check out our <a href="blog/cycle-syncing-guide.html" class="text-decoration-none" style="color: var(--primary);">complete guide to cycle syncing</a>.</p>
+                    <div class="col-md-8 animate__animated animate__fadeInRight">
+                        <h3 class="mb-3">Everything in One Place</h3>
+                        <p>Connect apps, smart devices like Apple Watch, or add logs directly. No more juggling multiple health trackers or apps. Import data from Apple Health, add manual entries, or use voice logging—all your health information lives in one comprehensive dashboard.</p>
                     </div>
                 </div>
 
-                <div class="row align-items-center flex-md-row-reverse">
-                    <div class="col-md-6 animate__animated animate__fadeInRight">
-                        <img src="images/4.png" alt="Personalized fertility and PCOS insights - Track ovulation, symptoms, and health correlations" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
+                <div class="row align-items-center mb-4 flex-md-row-reverse">
+                    <div class="col-md-4 animate__animated animate__fadeInRight">
+                        <img src="images/5.png" alt="Sleep quality analysis - Understand what affects your wellbeing" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
                     </div>
-                    <div class="col-md-6 animate__animated animate__fadeInLeft">
-                        <h3 class="mb-4">Personalized Health Insights</h3>
-                        <p>Receive tailored recommendations based on your unique data. Track progress toward your personal health goals. Share insights with healthcare providers for better care.</p>
+                    <div class="col-md-8 animate__animated animate__fadeInLeft">
+                        <h3 class="mb-3">Understand Causes & Effects</h3>
+                        <p>Get summaries, charts, and trends to see what's really affecting you. Discover which habits help your sleep, what triggers your headaches, or how your cycle impacts your energy. See the cause-and-effect relationships unique to YOUR body.</p>
+                    </div>
+                </div>
+
+                <div class="row align-items-center mb-4">
+                    <div class="col-md-4 animate__animated animate__fadeInLeft">
+                        <img src="images/4.png" alt="Cycle pattern analysis - Discover connections across your cycle, mood, and symptoms" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
+                    </div>
+                    <div class="col-md-8 animate__animated animate__fadeInRight">
+                        <h3 class="mb-3">Answers, Not Just Data</h3>
+                        <p>We find patterns across your cycle, habits, mood, sleep, and symptoms—so you stop asking "why." Stop drowning in charts and spreadsheets. Get clear insights about what's really affecting your health and wellbeing.</p>
+                    </div>
+                </div>
+
+                <div class="row align-items-center mb-4 flex-md-row-reverse">
+                    <div class="col-md-4 animate__animated animate__fadeInRight">
+                        <img src="images/3.png" alt="AI health chatbot - Get personalized answers based on your data" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
+                    </div>
+                    <div class="col-md-8 animate__animated animate__fadeInLeft">
+                        <h3 class="mb-3">Ask Your Questions</h3>
+                        <p>Get answers in plain English from our AI chatbot based on YOUR data. Ask "Why am I so tired this week?" or "What helps my cramps?" and get personalized insights instantly. Export detailed health reports to share with your doctor for better conversations and care.</p>
+                    </div>
+                </div>
+
+                <div class="row align-items-center mb-4">
+                    <div class="col-md-4 animate__animated animate__fadeInLeft">
+                        <img src="images/2.png" alt="Period tracker data visualization - Analyze menstrual cycle patterns and fertility trends" class="img-fluid rounded-4 shadow-lg" style="max-width: 220px;">
+                    </div>
+                    <div class="col-md-8 animate__animated animate__fadeInRight">
+                        <h3 class="mb-3">Make Data-Driven Decisions</h3>
+                        <p>Identify patterns between your cycle, mood, and energy levels. Schedule important events during your peak performance days. Understand how lifestyle changes impact your wellbeing.</p>
+                        <p class="small text-muted mt-3">Want to learn more? Check out our <a href="blog/cycle-syncing-guide.html" class="text-decoration-none" style="color: var(--primary);">complete guide to cycle syncing</a>.</p>
                     </div>
                 </div>
             </div>
@@ -502,12 +533,6 @@
                         <a class="btn btn-primary btn-lg animate__animated animate__pulse animate__infinite animate__slower" href="https://apps.apple.com/app/apple-store/id6608432371?pt=127249655&ct=gogogaia.com&mt=8" role="button">
                             <i class="bi bi-apple me-2"></i>Download on the App Store
                         </a>
-                        <div class="download-info">
-                            <div class="download-badge">
-                                <span class="badge rounded-pill">Free Download</span>
-                            </div>
-                            <p class="small text-light mt-2">Premium features available with subscription</p>
-                        </div>
                     </div>
                     
                     <div class="benefits-summary row mt-5">
