addded improved taging etc to clean things up

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="All-in-One Women's Wellness App, Holistic Health Tracking App for Women, Integrated Cycle Tracking and Wellness App, Personalized Wellness Experience for Women, Comprehensive Wellness Insights App, Long-Term Health Management App for Women, Habit Tracker for Women, Period and Mood Tracker App, Wellness Insights and Recommendations, Women's Health and Fitness Management App, Wearable Data Integration for Women's Health">
     <meta name="robots" content="index, follow">
     
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.go-go-gaia.com/">
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="Logo1.png">
     <link rel="apple-touch-icon" href="Logo1.png">
