--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Go Go Gaia: All-in-One Women's Health App | Track Your Wellness Journey" />
     <meta property="og:description" content="All-in-one period tracker, fertility app, and PCOS manager. Track menstrual cycles, ovulation, pregnancy, habits, mood, and wellness with personalized insights." />
-    <meta property="og:image" content="https://go-go-gaia.com/Logo1.png" />
-    <meta property="og:url" content="https://go-go-gaia.com" />
+    <meta property="og:image" content="https://www.go-go-gaia.com/Logo1.png" />
+    <meta property="og:url" content="https://www.go-go-gaia.com" />
     <meta property="og:type" content="website" />
-    
+
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Go Go Gaia: All-in-One Women's Health App | Track Your Wellness Journey" />
     <meta name="twitter:description" content="All-in-one period tracker, fertility app, and PCOS manager. Track menstrual cycles, ovulation, pregnancy, habits, mood, and wellness with personalized insights." />
-    <meta name="twitter:image" content="https://go-go-gaia.com/Logo1.png" />
+    <meta name="twitter:image" content="https://www.go-go-gaia.com/Logo1.png" />
     
     <!-- Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -52,12 +52,12 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "GO GO GAIA",
-        "url": "https://go-go-gaia.com",
+        "url": "https://www.go-go-gaia.com",
         "description": "Track and manage your wellness journey effectively with GO GO GAIA.",
-        "logo": "https://go-go-gaia.com/Logo1.png",
+        "logo": "https://www.go-go-gaia.com/Logo1.png",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://go-go-gaia.com/?s={search_term_string}",
+          "target": "https://www.go-go-gaia.com/?s={search_term_string}",
           "query-input": "required name=search_term_string"
         }
       }
@@ -72,16 +72,16 @@
       "applicationCategory": "HealthApplication",
       "operatingSystem": "iOS",
       "description": "All-in-one women's health app for tracking cycles, moods, fitness, sleep, and nutrition with AI-powered insights and correlations.",
-      "url": "https://go-go-gaia.com",
+      "url": "https://www.go-go-gaia.com",
       "downloadUrl": "https://apps.apple.com/app/apple-store/id6608432371?pt=127249655&ct=gogogaia.com&mt=8",
       "screenshot": [
-        "https://go-go-gaia.com/images/1.png",
-        "https://go-go-gaia.com/images/2.png",
-        "https://go-go-gaia.com/images/3.png",
-        "https://go-go-gaia.com/images/4.png",
-        "https://go-go-gaia.com/images/5.png",
-        "https://go-go-gaia.com/images/6.png",
-        "https://go-go-gaia.com/images/7.png"
+        "https://www.go-go-gaia.com/images/1.png",
+        "https://www.go-go-gaia.com/images/2.png",
+        "https://www.go-go-gaia.com/images/3.png",
+        "https://www.go-go-gaia.com/images/4.png",
+        "https://www.go-go-gaia.com/images/5.png",
+        "https://www.go-go-gaia.com/images/6.png",
+        "https://www.go-go-gaia.com/images/7.png"
       ],
       "featureList": [
         "Easy, Flexible Logging",
@@ -124,7 +124,7 @@
       "@type": "Organization",
       "name": "Holland Neurotech Inc.",
       "url": "https://hollandneurotech.com",
-      "logo": "https://go-go-gaia.com/Logo1.png",
+      "logo": "https://www.go-go-gaia.com/Logo1.png",
       "sameAs": [
         "https://twitter.com/holland_neuro",
         "https://instagram.com/gogogaia_tracker",
