improved our main website home page

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
               <li class="nav-item"><a class="nav-link" href="#benefits">Benefits</a></li>
               <li class="nav-item"><a class="nav-link" href="#personas">Who It's For</a></li>
               <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
+              <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
               <li class="nav-item"><a class="nav-link" href="blog/index.html">Blog</a></li>
               <li class="nav-item"><a class="nav-link nav-download" href="https://apps.apple.com/app/apple-store/id6608432371?pt=127249655&ct=gogogaia.com&mt=8" target="_blank">Download</a></li>
           </ul>
@@ -174,7 +175,7 @@
                 <div class="hero-text text-md-start mb-4 mb-md-0 animate__animated animate__fadeInLeft">
                     <h1 class="display-4 fw-bold">Women's Health<br>made <span style="color: #FF6B98; background: none; -webkit-text-fill-color: #FF6B98; background-clip: unset;">simple</span></h1>
                     <p class="lead mb-4">Your body tells a story. We help you understand it.</p>
-                    <p class="lead mb-4">From your first period to pregnancy and beyond—track every phase of your health journey with confidence and clarity.</p>
+                    <p class="lead mb-4">From balancing your cycles to optimising your lifestyle and reducing your symptoms, track every part of your health with confidence and clarity.</p>
 
                     <a class="btn btn-primary btn-lg" href="https://apps.apple.com/app/apple-store/id6608432371?pt=127249655&ct=gogogaia.com&mt=8" role="button">
                         <i class="bi bi-apple me-2"></i>Download on the App Store
@@ -295,7 +296,7 @@
                         <div class="feature-box d-flex flex-column h-100 animate__animated animate__fadeInUp animate__delay-1s" data-bs-toggle="modal" data-bs-target="#habitModal">
                             <div class="d-flex align-items-start mb-3">
                                 <div class="icon-square">
-                                    <i class="bi bi-check-square"></i>
+                                    <i class="bi bi-calendar-check"></i>
                                 </div>
                                 <div>
                                     <h3>Habit Tracking</h3>
@@ -443,6 +444,7 @@
                                 <h3>Understanding Your Cycle</h3>
                                 <p class="lead">Just starting to track your menstrual cycle? We make it simple to understand your body's natural rhythms and hormonal changes throughout the month.</p>
                                 <p>Learn when to expect your period with accurate cycle predictions, identify your cycle phases (follicular, ovulation, luteal, and menstrual), and discover how your hormones affect your mood, energy levels, and overall wellbeing. Track PMS symptoms, monitor period flow and length, and understand ovulation patterns. Perfect for anyone wanting to practice cycle syncing—aligning your lifestyle, workouts, and nutrition with your menstrual cycle phases for better productivity, performance, and self-care. Whether you're new to period tracking or want deeper insights into your hormonal health, Go Go Gaia helps you decode your body's signals.</p>
+                                <a href="blog/cycle-syncing-guide.html" class="blog-link">Learn about cycle syncing <i class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="pcos" role="tabpanel" aria-labelledby="pcos-tab">
@@ -450,6 +452,7 @@
                                 <h3>Managing PCOS & Hormonal Health</h3>
                                 <p class="lead">Living with PCOS (Polycystic Ovary Syndrome) or irregular periods? Track symptoms, identify triggers, and take control of your hormonal health with comprehensive PCOS management tools.</p>
                                 <p>Monitor irregular menstrual cycles and unpredictable periods, track PCOS symptoms including acne, hirsutism (excess hair growth), weight fluctuations, mood swings, anxiety, and depression. Log insulin resistance indicators, track your PCOS diet and supplements, monitor hormonal acne patterns, and record fertility treatments or medications like Metformin or birth control. Identify triggers and patterns in your PCOS symptoms to share with your endocrinologist or OBGYN. Our PCOS tracker helps you understand your unique hormonal imbalances and provides data-driven insights for better PCOS treatment and management. Perfect for women with diagnosed PCOS, suspected hormonal imbalances, or anyone navigating the challenges of polycystic ovary syndrome.</p>
+                                <a href="blog/complete-guide-to-pcos.html" class="blog-link">Complete guide to PCOS management <i class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="fertility" role="tabpanel" aria-labelledby="fertility-tab">
@@ -457,6 +460,7 @@
                                 <h3>Trying to Conceive</h3>
                                 <p class="lead">Ready to start your family? We help you identify your most fertile days and optimize your chances of conception with advanced fertility tracking and ovulation prediction.</p>
                                 <p>Track ovulation predictions and pinpoint your fertile window, log basal body temperature (BBT) for accurate ovulation detection, monitor cervical mucus changes throughout your cycle, and record LH surge results from ovulation predictor kits (OPKs). Get fertile window alerts so you never miss your most fertile days, track intimacy timing for conception planning, and monitor early pregnancy symptoms during the two-week wait (TWW). Perfect for couples trying to conceive (TTC), whether you're just starting your fertility journey or have been trying for several cycles. Our fertility tracker supports natural conception, helps you understand your ovulation cycle, and provides the data you need for conversations with fertility specialists or reproductive endocrinologists if needed. Compatible with IVF, IUI, and other assisted reproductive technology (ART) treatments.</p>
+                                <a href="blog/how-to-tell-if-youre-ovulating.html" class="blog-link">Learn to recognize ovulation signs <i class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="pregnancy" role="tabpanel" aria-labelledby="pregnancy-tab">
@@ -464,6 +468,7 @@
                                 <h3>Pregnancy Journey</h3>
                                 <p class="lead">Expecting? Track every precious moment of your pregnancy with week-by-week guidance, trimester milestones, and comprehensive prenatal monitoring.</p>
                                 <p>Follow your baby's development week by week through all three trimesters, log pregnancy symptoms including morning sickness, nausea, fatigue, food aversions, and cravings. Monitor healthy pregnancy weight gain according to your pre-pregnancy BMI, count baby kicks and fetal movements in the third trimester, and keep track of prenatal appointments, ultrasounds, and prenatal vitamins. Track blood pressure readings, glucose levels for gestational diabetes monitoring, and Braxton Hicks contractions as you approach your due date. Record questions for your OBGYN or midwife, document pregnancy mood changes and emotions, and create a complete prenatal health record to share with your healthcare provider. Perfect for first-time moms and experienced mothers alike, whether you're navigating a high-risk pregnancy or enjoying a healthy, low-risk pregnancy journey. Cherish every moment from conception to delivery.</p>
+                                <a href="blog/pregnancy-tracking-guide.html" class="blog-link">Complete pregnancy tracking guide <i class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="menopause" role="tabpanel" aria-labelledby="menopause-tab">
@@ -471,6 +476,7 @@
                                 <h3>Perimenopause & Menopause</h3>
                                 <p class="lead">Navigating perimenopause or menopause? Track symptoms, understand hormonal changes, and take control of this natural life transition with comprehensive menopause tracking tools.</p>
                                 <p>Monitor irregular periods and cycle changes as you transition into menopause, track hot flashes and night sweats frequency and intensity, log sleep disturbances and insomnia patterns, and record mood changes, anxiety, and depression. Track vaginal dryness, joint pain, brain fog, and memory issues. Monitor hormone replacement therapy (HRT) effects including estrogen, progesterone, and testosterone treatments. Log lifestyle changes like diet modifications, exercise routines, and supplements for menopause symptoms. Track perimenopause symptoms including spotting, heavy bleeding, and cycle length changes. Perfect for women in perimenopause (typically 40s), experiencing menopause (average age 51), or postmenopausal women managing ongoing symptoms. Share your comprehensive symptom data with your gynecologist or menopause specialist to optimize your treatment plan. Our tracking helps you identify triggers for hot flashes, understand patterns in your symptoms, and navigate this transition with confidence and clarity.</p>
+                                <a href="blog/perimenopause-guide.html" class="blog-link">Complete perimenopause guide <i class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="wellness" role="tabpanel" aria-labelledby="wellness-tab">
@@ -478,6 +484,7 @@
                                 <h3>General Wellness & Self-Care</h3>
                                 <p class="lead">Want to optimize your overall health and wellbeing? Track habits, mood, sleep, and fitness all in one place with our comprehensive women's health tracker.</p>
                                 <p>Build healthy habits that stick with our habit tracker, monitor your mental health and emotional wellbeing with daily mood tracking, track sleep quality and duration to improve sleep hygiene, and log fitness activities, workouts, and exercise routines. Understand how sleep affects your mood and productivity, discover correlations between diet and energy levels, track water intake and nutrition habits, and monitor stress levels and anxiety patterns. Record self-care activities like meditation, yoga, journaling, and mindfulness practices. Get personalized health insights based on your unique patterns and lifestyle factors. Perfect for anyone taking a holistic approach to their health, whether you're focused on mental wellness, physical fitness, hormone balance, or overall lifestyle optimization. Ideal for women who want to understand the connections between their daily habits, menstrual cycle, energy levels, and overall quality of life.</p>
+                                <a href="blog/habit-tracking-success.html" class="blog-link">Building habits that stick <i class="bi bi-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -492,20 +499,20 @@
                   <div class="carousel-inner">
                       <div class="carousel-item active">
                           <div class="testimonial-bubble animate__animated animate__fadeIn">
-                              <p class="testimonial-text">"Go Go Gaia has been a game changer! Now, I can easily track my cycle and health metrics all in one place. I now plan my important meetings around my high-energy days, making sure I am bringing my A Game."</p>
-                              <p class="blockquote-footer">Emily, 29</p>
+                              <p class="testimonial-text">"I used to dread my luteal phase. Low energy, brain fog, everything felt harder. Go Go Gaia showed me I was consistently sleeping worse during those weeks. Now I prioritize sleep days 18-25 of my cycle, and it's completely changed my energy levels. Turns out I just needed to work with my body instead of pushing through."</p>
+                              <p class="blockquote-footer">Sarah K., 32 • Cycle Syncing</p>
                           </div>
                       </div>
                       <div class="carousel-item">
                           <div class="testimonial-bubble animate__animated animate__fadeIn">
-                              <p class="testimonial-text">"I love how Go Go Gaia integrates my fitness and health data! It's empowering to have everything I need for my wellness journey in one app. Highly recommend it to all women!"</p>
-                              <p class="blockquote-footer">Jessica, 34</p>
+                              <p class="testimonial-text">"After years of irregular periods and hormonal acne, I had actual data to show my doctor. Go Go Gaia's correlation insights showed that my breakouts spike when I eat dairy during my luteal phase. I cut out dairy days 18-28, and my skin cleared up. It's the first time something actually worked."</p>
+                              <p class="blockquote-footer">Maya T., 28 • PCOS Management</p>
                           </div>
                       </div>
                       <div class="carousel-item">
                           <div class="testimonial-bubble animate__animated animate__fadeIn">
-                              <p class="testimonial-text">"Finally, an app that understands women's health! Go Go Gaia has made tracking my mood and period so easy. The insights are incredibly helpful for managing my overall well-being!"</p>
-                              <p class="blockquote-footer">Sophie, 27</p>
+                              <p class="testimonial-text">"We tried to conceive for 8 months with no luck. Go Go Gaia's fertility tracking showed I was ovulating on day 18, not day 14 like I assumed. Once we adjusted our timing, we got pregnant within two cycles. Having my BBT and cervical mucus data all in one place made the whole process way less stressful."</p>
+                              <p class="blockquote-footer">Jennifer M., 35 • Fertility Tracking</p>
                           </div>
                       </div>
                   </div>
@@ -694,10 +701,11 @@
           <p><a href="https://tiktok.com/@gogogaia_tracker" target="_blank"><i class="bi bi-tiktok me-2"></i>@gogogaia_tracker</a></p>
         </div>
         <div class="col-md-4 text-center text-md-end">
-          <h5>Legal</h5>
+          <h5>Company</h5>
+          <p><a href="about.html">About Us</a></p>
+          <p><a href="blog/index.html">Blog</a></p>
           <p><a href="https://hollandneurotech.com/privacy-policy.html">Privacy Policy</a></p>
           <p><a href="https://hollandneurotech.com/terms-and-conditions.html">Terms of Service</a></p>
-          <p><a href="blog/index.html">Health & Wellness Blog</a></p>
         </div>
       </div>
       <div class="row mt-4">
